# repro-pyright-typing-sqlmodel-relation

./: Makefile  README.adoc  main.py  pyproject.toml
.github/workflows/: ci.yml
