[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "repro-pyright-typing-sqlmodel-relation"
version = "0.1.0"
requires-python = ">=3.8,<4.0"
dependencies = ["sqlmodel (>=0.0.24,<0.0.25)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.400"
types-sqlalchemy = "^1.4.50.20240218"

[tool.pyright]
strict = ["*"]
reportUnnecessaryTypeIgnoreComment = "error"
